[package]
name = "printhor-hwa-utils"
version = "0.0.4"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printor utillery"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
keywords = ["hardware", "abstration", "library", "printhor"]
categories = ["hardware-support"]
license = "MIT"
documentation = "https://docs.rs/printhor-static-cell"
homepage = "https://github.com/cbruiz/printhor"

[lib]

[features]
default = ["std", "with-log"]
std = ["critical-section/std"]
with-log = ["log"]
with-defmt = ["defmt"]

[dependencies]
printhor-hwa-common-macros = { version = "0", path = "../printhor-hwa-common-macros" }
portable-atomic = { version = "1.6",  default-features = false, features = ["critical-section"] }
static_cell = { version = "2.1",  default-features = false, features = [] }
const_env = { version = "0.1.2"}
embassy-sync = { version = "0.6", features = [] }
futures = { version = "0.3" }
cfg-if = { version = "1.0" }
defmt = {version = "0.3", default-features = false, optional = true}
log = { version = "0.4", default-features = false, optional = true }
critical-section = { version = "1.1", default-features = false, features = []}
[dev-dependencies]
futures-test = { version = "0.3" }

[patch.crates-io]
embassy-sync = { path = "../libs/embassy/embassy-sync" }